force-app/main/default/objects/Historical_Transaction__c/Historical_Transaction__c.object-meta.xml
<CustomObject>
    <label>Historical Transaction</label>
    <nameField>
        <label>Historical Transaction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historical Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>