force-app/main/default/objects/Historical_Transaction__c/fields/ABA_Number__c.field-meta.xml
<CustomField>
    <fullName>ABA_Number__c</fullName>
    <label>ABA Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>