force-app/main/default/objects/Historical_Transaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>