force-app/main/default/objects/Historical_Transaction__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Historical Transactions</relationshipLabel>
    <relationshipName>Historical_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>