force-app/main/default/objects/Historical_Transaction__c/fields/Beneficiary_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Account_ID__c</fullName>
    <label>Beneficiary Account ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>