force-app/main/default/objects/Historical_Transaction__c/fields/CreateBy__c.field-meta.xml
<CustomField>
    <fullName>CreateBy__c</fullName>
    <label>CreateBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>