force-app/main/default/objects/Historical_Transaction__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>CreatedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>