force-app/main/default/objects/Historical_Transaction__c/fields/Delivery_Instrument_Address1__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instrument_Address1__c</fullName>
    <label>Delivery Instrument Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>