force-app/main/default/objects/Historical_Transaction__c/fields/Delivery_Instrument_City_St_Zip__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instrument_City_St_Zip__c</fullName>
    <label>Delivery Instrument City St Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>