force-app/main/default/objects/Historical_Transaction__c/fields/Delivery_Instrument_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instrument_Name__c</fullName>
    <label>Delivery Instrument Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>