force-app/main/default/objects/Historical_Transaction__c/fields/Disbursement_Letter__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Letter__c</fullName>
    <label>Disbursement Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>