force-app/main/default/objects/Historical_Transaction__c/fields/Explanation_1__c.field-meta.xml
<CustomField>
    <fullName>Explanation_1__c</fullName>
    <label>Explanation 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>