force-app/main/default/objects/Historical_Transaction__c/fields/Explanation_2__c.field-meta.xml
<CustomField>
    <fullName>Explanation_2__c</fullName>
    <label>Explanation 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>