force-app/main/default/objects/Historical_Transaction__c/fields/Explanation_3__c.field-meta.xml
<CustomField>
    <fullName>Explanation_3__c</fullName>
    <label>Explanation 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>