force-app/main/default/objects/Historical_Transaction__c/fields/Notification_Sent_1__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sent_1__c</fullName>
    <label>Notification_Sent</label>
    <type>Date</type>
</CustomField>