force-app/main/default/objects/Historical_Transaction__c/fields/Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sent__c</fullName>
    <label>Notification Sent</label>
    <type>Date</type>
</CustomField>