force-app/main/default/objects/Historical_Transaction__c/fields/Payee1__c.field-meta.xml
<CustomField>
    <fullName>Payee1__c</fullName>
    <label>Payee1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>