force-app/main/default/objects/Historical_Transaction__c/fields/Payee2__c.field-meta.xml
<CustomField>
    <fullName>Payee2__c</fullName>
    <label>Payee2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>