force-app/main/default/objects/Historical_Transaction__c/fields/PVR__c.field-meta.xml
<CustomField>
    <fullName>PVR__c</fullName>
    <label>PVR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>