force-app/main/default/objects/Historical_Transaction__c/fields/Receipt_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Notification_Sent__c</fullName>
    <label>Receipt_Notification_Sent</label>
    <type>DateTime</type>
</CustomField>