force-app/main/default/objects/Historical_Transaction__c/fields/Special_Handling__c.field-meta.xml
<CustomField>
    <fullName>Special_Handling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Handling</label>
    <type>Checkbox</type>
</CustomField>