force-app/main/default/objects/Historical_Transaction__c/fields/SSA__c.field-meta.xml
<CustomField>
    <fullName>SSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSA</label>
    <type>Checkbox</type>
</CustomField>