force-app/main/default/objects/Historical_Transaction__c/fields/SSI__c.field-meta.xml
<CustomField>
    <fullName>SSI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSI</label>
    <type>Checkbox</type>
</CustomField>