force-app/main/default/objects/Historical_Transaction__c/fields/SSMA_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>SSMA_TimeStamp__c</fullName>
    <label>SSMA_TimeStamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>