force-app/main/default/objects/Historical_Transaction__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Transaction ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>