force-app/main/default/objects/Historical_Transaction__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <label>Trust</label>
    <referenceTo>Trust__c</referenceTo>
    <relationshipLabel>Historical Transactions</relationshipLabel>
    <relationshipName>Historical_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>