force-app/main/default/objects/Historical_Transaction__c/fields/Trust_Type__c.field-meta.xml
<CustomField>
    <fullName>Trust_Type__c</fullName>
    <label>Trust Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>