force-app/main/default/objects/Historical_Transaction__c/fields/Up_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Up_To_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Up To Date</label>
    <type>Checkbox</type>
</CustomField>